@@ -24,6 +24,7 @@ Bugs fixed:
 - 1524781 Fixed localinstancepath ref property handling
 - 1528455 Added support for local CIM schema
 - 1528304 Fixed segfault in method invocations with ref parameters
+- 1529021 Added trace options to config file
 
 Changes in 1.1.0
 ================
